--- a/src/pages/Shop/Shops.css
+++ b/src/pages/Shop/Shops.css
@@ -12,11 +12,59 @@
   height: 200px !important;
 }
 .km-detail-card {
-  position: absolute;
+  position: relative;
   width: 100%;
-  bottom: -70px;
+  top: -20px;
 }
 .km-detail-card .km-detail-card-main {
   border: 0;
   border-radius: 7px 7px 0 0;
+}
+.km-btns {
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 600px;
+  margin-inline: auto;
+}
+.km-btns > ion-button {
+  flex: 1;
+}
+.km-card-header h4 {
+  color: #363636;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+.km-card-header p {
+  color: #361705;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+.shop-details .km-detail-card-main {
+  position: relative;
+}
+.km-card-header small:nth-of-type(1) {
+  position: absolute;
+  top: 8px;
+}
+.km-card-header small:nth-of-type(2) {
+  position: absolute;
+  top: 7px;
+  right: 15px;
+}
+.km-card-header ion-icon {
+  position: relative;
+  top: 1px;
+}
+.km-card-content {
+  margin-top: 20px;
+}
+.km-card-content p {
+  text-align: justify;
+  color: #202020;
+  word-break: break-all;
+}
+@media screen and (max-width: 300px) {
+  .km-btns {
+    flex-direction: column;
+  }
 }
