--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,25 +1,25 @@
-ion-tab-bar {
-  bottom: 20px;
+/* ion-tab-bar {
+  bottom: 0;
   position: relative;
   border-radius: 16px;
-  width: 92%;
+  width: 100%;
   margin: 0 auto;
 }
 
 ion-tab-button {
+  position: relative;
+  top: 1px;
   --color: var(--ion-color-medium);
   --color-selected: var(--ion-color-primary);
-
-  &::before {
-    background-color: transparent;
-    display: block;
-    content: "";
-    margin: 0 auto;
-    width: 20px;
-    height: 2px;
-  }
-
-  &.tab-selected::before {
-    background-color: var(--ion-color-primary);
-  }
 }
+ion-tab-button::before {
+  background-color: transparent;
+  display: block;
+  content: "";
+  margin: 0 auto;
+  width: 20px;
+  height: 2px;
+}
+ion-tab-button.tab-selected::before {
+  background-color: var(--ion-color-primary);
+} */
