--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -105,7 +105,7 @@ ion-input.ionInput {
   border: 1px solid red;
   border-radius: 10px;
 } */
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   /*
    * Dark Colors
    * -------------------------------------------
