--- a/src/components/error/ErrorFallBack/ErrorFallBack.css
+++ b/src/components/error/ErrorFallBack/ErrorFallBack.css
@@ -6,16 +6,18 @@
   flex-direction: column;
   padding: 10px;
   text-align: center;
-  gap: 5px;
+  gap: 3px;
 }
 .ErrorFallBack p {
   color: rgba(0, 0, 0, 0.7);
+  line-height: 23px;
 }
 .ErrorFallBack h1 span {
   vertical-align: middle;
+  color: rgba(0, 0, 0, 0.8);
 }
-.ErrorFallBack h1 span:nth-of-type(2) {
+.ErrorFallBack h1 span:nth-of-type(1) {
   position: relative;
   top: 3px;
-  margin-left: 5px;
+  margin-right: 5px;
 }
