--- a/src/theme/shared.css
+++ b/src/theme/shared.css
@@ -1,6 +1,6 @@
 div.form-app {
   width: 100%;
-  height: 100vh;
+  min-height: 100%;
   overflow: scroll;
   padding: 15px 25px;
   position: fixed;
@@ -14,7 +14,7 @@ div.form-app > div.form-app-core {
 }
 div.form-app > div.form-app-core-login {
   margin-top: 50%;
-  padding-bottom: 25%;
+  /* padding-bottom: 25%; */
 }
 div.form-app > div.form-app-core form,
 div.form-app > div.form-app-core section {
