--- a/src/pages/ResetPassword/Reset.css
+++ b/src/pages/ResetPassword/Reset.css
@@ -1,6 +1,5 @@
-/* .reset-email-screen-center {
-  width: 100%;
-  height: 100%;
+.reset-email-screen-center {
+  padding: 0 !important;
 }
 .reset-email-screen-center > div {
   width: 100%;
@@ -8,4 +7,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-} */
+}
