--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -10,6 +10,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   text-align: center;
+}
+
+ion-text.intro-text {
+  line-height: 1.5;
 }
