--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -19,12 +19,12 @@
   --ion-color-secondary-tint: #50c8ff;
 
   /** tertiary **/
-  --ion-color-tertiary: #5260ff;
-  --ion-color-tertiary-rgb: 82, 96, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
+  --ion-color-tertiary: #ffc409;
+  --ion-color-tertiary-rgb: 255, 196, 9;
+  --ion-color-tertiary-contrast: #000000;
+  --ion-color-tertiary-contrast-rgb: 0, 0, 0;
+  --ion-color-tertiary-shade: #e0ac08;
+  --ion-color-tertiary-tint: #ffca22;
 
   /** success **/
   --ion-color-success: #2dd36f;
