--- a/src/pages/Shop/payment/Payment.css
+++ b/src/pages/Shop/payment/Payment.css
@@ -82,3 +82,14 @@ div.shop-payment-details td {
 }
 div.payment_transaction form.payment_transaction {
 }
+div.sample-payment-image {
+  width: 100%;
+  height: 100%;
+}
+div.payment-tip ion-text {
+  display: block;
+  margin-bottom: 10px;
+}
+div.payment-tip ion-text ion-chip {
+  text-align: center;
+}
