--- a/src/pages/Shop/payment/Payment.css
+++ b/src/pages/Shop/payment/Payment.css
@@ -13,12 +13,30 @@
 .card-con {
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: space-evenly;
-  margin: 15px 0;
+  margin: 5px 0;
+  gap: 10px;
+}
+.card-con > div:nth-of-type(1) {
+  padding: 10px;
+  width: 30%;
+}
+.card-con > div:nth-of-type(1) img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+}
+.card-con > div:nth-of-type(2) {
+  padding: 10px;
+  width: 70%;
 }
 .card-con > div p:nth-of-type(1) {
   margin-bottom: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 5px;
+  color: #361705;
 }
 .payment-desc {
   width: 100%;
